--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Afcf</title>
   </head>
-  <link rel="stylesheet" href="./survey.css"
+  <link rel="stylesheet" href="style.css" />
   <body>
     <h1 class="title">Afcf Survey Form</h1>
     <p class="description">
