--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         id="email"
         class="form-input"
         placeholder="Enter your email"
-        required<br
+        required<br>
         />
         </div>
 
@@ -43,7 +43,7 @@
         id="number"
         class="form-input"
         placeholder="Enter your number"
-        required<br
+        required<br>
       />
       </div>
 
